[package]
name = "poile"
version = "0.1.0"
authors = ["versbinarii <versbinarii@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
hyper = "0.13"
hyper-tls = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2"
dotenv = "0.15"
dirs-sys = "0.3"

[dependencies.tokio]
version = "0.2.8"
features = ["full"]
